--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -30,3 +30,9 @@ body {
     overflow: hidden;
     padding: 40px;
 }
+
+@media only screen and (max-width: 600px) {
+    #main {
+        padding: 20px;
+    }
+}
