--- a/src/components/buttons/button-rules/button-rules.css
+++ b/src/components/buttons/button-rules/button-rules.css
@@ -16,3 +16,9 @@
     text-transform: uppercase;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+    .button--rules {
+        align-self: center;
+    }
+}
