--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,3 +9,12 @@
     padding: 20px;
 
 }
+
+@media only screen and (max-width: 600px) {
+    .main__header {
+        width: 100%;
+        padding: 15px;
+        border-radius: 10px;
+        border: solid 3px var(--Header-Outline);
+    }
+}
