--- a/src/components/rock-scissor-paper/rock-scissor-paper.css
+++ b/src/components/rock-scissor-paper/rock-scissor-paper.css
@@ -54,3 +54,20 @@
     background: var(--white);
     box-shadow: 0px 4px 0px 0px #0000003b inset;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .div--rock-paper-scissors {
+        height: 250px;
+    }
+    .div--rock-paper-scissors .card--rock {
+        transform: translateX(51%);
+    }
+    .rock-paper-scissors__card {
+        padding: 15px;
+    }
+    .rock-paper-scissors__card__img {
+        width: 90px;
+        height: 90px;
+    }
+}
