--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -5,3 +5,9 @@
     text-transform: uppercase;
     margin: 0px;
 }
+
+@media only screen and (max-width: 600px) {
+    .header__h1 {
+        font-size: 25px;
+    }
+}
